--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "tabletexpressserver",
-  "version": "0.0.2",
+  "name": "connectivitypc-server",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "deploy": "pkg ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
