--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "connectivitypc-server",
   "version": "0.1.0",
+  "bin": "./bin/www",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
