--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "deploy": "pkg ./bin/www"
+    "deploy": "pkg ."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
